--- a/BLAKE3.Benchmarks/BLAKE3.Benchmarks.csproj
+++ b/BLAKE3.Benchmarks/BLAKE3.Benchmarks.csproj
@@ -2,11 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <!--<TargetFramework>netcoreapp3.1</TargetFramework>-->
     <RootNamespace>BLAKE3.Benchmarks</RootNamespace>
-    <Optimize>true</Optimize>
-    <DebugSymbols>false</DebugSymbols>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
@@ -17,6 +15,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BLAKE3\BLAKE3.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="ReferenceImpl*\**\*" />
+    <Content Include="ReferenceImpl\target\release\blake3_c.dll">
+      <Link>blake3_c.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
